--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,6 +19,10 @@
         app:border_width="2dp"
         app:border_color="@color/colorPrimary"
         />
+    <TextView
+        android:id="@+id/tv_code_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <com.guyj.img.EasyImageView
         android:layout_width="200dp"
         android:layout_height="100dp"
@@ -23,6 +31,10 @@
         app:border_width="2dp"
         app:border_color="@color/colorPrimary"
         />
+    <TextView
+        android:id="@+id/tv_code_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <com.guyj.img.EasyImageView
         android:layout_width="200dp"
         android:layout_height="100dp"
@@ -31,4 +43,9 @@
         app:border_width="2px"
         app:border_color="@color/colorPrimary"
         />
+    <TextView
+        android:id="@+id/tv_code_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
+</ScrollView>
